jsonschemadsl2ecore.trafo.opt/test/test94/invalidtests/example8.test94
{
	"adddv":"string is good",
	"xxcccxx":2,
	"zzzfff":5,
	"qqqeeesss":"more than 6",
	"qqfff":7,
	"rererccc":2,
	"ssdddfff":"cannot be both integer and string"
}